# Eveler_point_dev

Bucket/: .gitignore  README.md  docker-compose.yml  init_bucket.sh  pyproject.toml
Bucket/dags/: script.py
GraphQL_API/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
GraphQL_API/app/: database.py  main.py
GraphQL_API/app/controllers/: client.py  user.py
GraphQL_API/app/models/: client.py  user.py
GraphQL_API/app/routes/: user.py
GraphQL_API/app/routes/graphql/: router.py  users.py
GraphQL_API/app/routes/rest/: client.py  users.py
GraphQL_API/app/schemas/: user.py
GraphQL_API/app/schemas/graphql/: client.py  user.py
GraphQL_API/app/schemas/rest/: client.py  user.py
Multithreading_paralelization/: docker-compose.yml
Multithreading_paralelization/API/: Dockerfile
Multithreading_paralelization/API/app/: main.py
Multithreading_paralelization/notebook/: Dockerfile
Multithreading_paralelization/notebook/files/: main.ipynb
Parallel_computing/: .gitignore  README.md  docker-compose.yml
Parallel_computing/API/: pyproject.toml
Parallel_computing/API/app/: main.py
Parallel_computing/notebook/: .gitignore  Dockerfile  mojoproject.toml
Parallel_computing/notebook/files/: generate_csv.py  main.ipynb
